--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamodb-raw",
-  "version": "1.1.9",
+  "version": "1.2.1",
   "contributors": [
     "Ryan Fitzgerald <ryan@codebrewstudios.com>",
     "Greg Sabia Tucker <greg@narrowlabs.com>",
@@ -28,7 +28,7 @@
     "async": "1.5.x",
     "aws-sdk": "^2.186.x",
     "bunyan": "1.5.x",
-    "joi": "14.x.x",
+    "joi": "14.3.1",
     "lodash": "4.x.x",
     "node-uuid": "1.4.x"
   },
